--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>SG60 Framework</title>
+	<title>Final Project - SG60: Visualizing Singapore's 60 Years of Development</title>
 	<!-- Tailwind CSS -->
 	<link href="https://cdnjs.cloudflare.com/ajax/libs/tailwindcss/2.2.19/tailwind.min.css" rel="stylesheet">
 	<!-- D3.js -->
