--- a/index.html
+++ b/index.html
@@ -499,7 +499,7 @@
 			</div>
 		</div>
 	</footer>
-	<!-- NAVIGATION & 3D MAP INITIALIZATION SCRIPT -->
+	<!-- NAVIGATION & 3D MAP & POPULATION INITIALIZATION SCRIPT -->
 	<script>
 		document.addEventListener('DOMContentLoaded', () => {
 		  const nav = document.getElementById('main-nav');
