--- a/index.html
+++ b/index.html
@@ -386,7 +386,7 @@
 			</section>
 			<!-- Population -->
 			<section id="population" class="bg-white p-8 rounded shadow">
-				<h2 class="text-2xl font-semibold text-red-600 mb-6 text-center">Population Dashboard</h2>
+				<h2 class="text-2xl font-bold mb-6 text-red-600 border-b pb-2">Population Dashboard</h2>
 				<!-- Controls -->
 				<div class="flex flex-wrap justify-between items-center mb-6">
 					<div class="flex items-center space-x-2">
