--- a/index.html
+++ b/index.html
@@ -463,33 +463,22 @@
 		<div class="container mx-auto">
 			<ul class="flex justify-center space-x-2 md:space-x-8">
 				<li><a href="#overview" class="nav-item active flex items-center"><i class="fas fa-home mr-2"></i> Overview</a></li>
-				<li><a href="#housing" class="nav-item flex items-center"><i class="fas fa-building mr-2"></i> Housing</a></li>
 				<li><a href="#map3d" class="nav-item flex items-center"><i class="fas fa-map-marked-alt mr-2"></i> 3D Map</a></li>
 				<li><a href="#population" class="nav-item flex items-center"><i class="fas fa-users mr-2"></i> Population</a></li>
 			</ul>
 		</div>
 	</nav>
 	<!-- MAIN CONTENT -->
+			<!-- Overview -->
+			<section id="overview">
+				<iframe
+				  src="https://prudhvinsk.github.io/SG-60/"
+				  style="width:100%; height:80vh; border:none;"
+				  sandbox="allow-scripts allow-same-origin"
+				></iframe>
+			</section>
 	<main id="main-content" class="flex-grow container mx-auto py-8 px-4">
 		<div class="max-w-5xl mx-auto space-y-12">
-			<!-- Overview -->
-			<section id="overview" class="transition-all duration-300 hover-effect">
-				<h2 class="text-2xl font-bold mb-6 text-red-600 border-b pb-2">Overview</h2>
-				<div class="module-placeholder">
-					<h3 class="text-xl font-medium text-gray-700 mb-4">Overview Module</h3>
-					<p class="text-gray-600 mb-2">Paste your Overview module code here.</p>
-					<p class="text-sm text-gray-500">Replace this placeholder with your content.</p>
-				</div>
-			</section>
-			<!-- Housing Development -->
-			<section id="housing" class="transition-all duration-300 hover-effect">
-				<h2 class="text-2xl font-bold mb-6 text-red-600 border-b pb-2">Housing Development</h2>
-				<div class="module-placeholder">
-					<h3 class="text-xl font-medium text-gray-700 mb-4">Housing Development Module</h3>
-					<p class="text-gray-600 mb-2">Paste your Housing Development module code here.</p>
-					<p class="text-sm text-gray-500">Replace this placeholder with your content including charts, graphs, and analysis.</p>
-				</div>
-			</section>
 			<!-- 3D Housing Map -->
 			<section id="map3d" class="transition-all duration-300 hover-effect">
 				<h2 class="text-2xl font-bold mb-6 text-red-600 border-b pb-2">3D Housing Map</h2>
