--- a/index.html
+++ b/index.html
@@ -447,6 +447,14 @@
 		    .stat-value {
 		      font-weight: 600;
 		    }
+
+
+                    overview iframe {
+                      width: 100%;
+                      height: calc(100vh - 120px);
+                      border: none;
+                     }
+
 		
 	</style>
 </head>
