--- a/index.html
+++ b/index.html
@@ -449,7 +449,7 @@
 		    }
 
 
-                    overview iframe {
+                    #overview iframe {
                       width: 100%;
                       height: calc(100vh - 120px);
                       border: none;
