--- a/index.html
+++ b/index.html
@@ -1299,29 +1299,33 @@
 		        
 		        // Update building colors based on mode
 		        if (mode === 'chronological') {
-		          map.setPaintProperty('hdb-3d', 'fill-extrusion-color', 
-					       [ 'case', ['boolean', ['feature-state','hover'], false], '#ffeb3b', ['interpolate', ['linear'], 
-					       ['coalesce', ['get','YEAR'], ['get','year'], 1960], 
-						1960, '#440154', // 
-						1970, '#443982', // 
-						1980, '#30678d', // 
-						1990, '#20908c', // 
-						2000, '#35b778', // 
-						2010, '#90d643', // 
-						2020, '#fde724' 
-			] ]);
+		          map.setPaintProperty('hdb-3d', 'fill-extrusion-color', [
+  'case',
+  ['boolean', ['feature-state','hover'], false],
+  '#ffeb3b',
+  ['interpolate', ['linear'],
+    ['coalesce', ['get','YEAR'], ['get','year'], 1960],
+    1960, '#00204d',
+    1970, '#173b7d',
+    1980, '#2e54a1',
+    1990, '#507fc0',
+    2000, '#7cb9dd',
+    2010, '#abd9e9',
+    2020, '#edf8eb'
+  ]
+]);
 		          
 		          // legend
 		          modeLegend.innerHTML = `
-      <div class="legend-item"><div class="legend-color" style="background:#440154"></div>1960s</div>
-      <div class="legend-item"><div class="legend-color" style="background:#443982"></div>1970s</div>
-      <div class="legend-item"><div class="legend-color" style="background:#30678d"></div>1980s</div>
-     <div class="legend-item"><div class="legend-color" style="background:#20908c"></div>1990s</div>
-      <div class="legend-item"><div class="legend-color" style="background:#35b778"></div>2000s</div>
-      <div class="legend-item"><div class="legend-color" style="background:#90d643"></div>2010s</div>
-      <div class="legend-item"><div class="legend-color" style="background:#fde724"></div>2020s</div>
-   `;
-     modeLegend.style.display = 'block';
+  <div class="legend-item"><div class="legend-color" style="background:#00204d"></div>1960s</div>
+  <div class="legend-item"><div class="legend-color" style="background:#173b7d"></div>1970s</div>
+  <div class="legend-item"><div class="legend-color" style="background:#2e54a1"></div>1980s</div>
+  <div class="legend-item"><div class="legend-color" style="background:#507fc0"></div>1990s</div>
+  <div class="legend-item"><div class="legend-color" style="background:#7cb9dd"></div>2000s</div>
+  <div class="legend-item"><div class="legend-color" style="background:#abd9e9"></div>2010s</div>
+  <div class="legend-item"><div class="legend-color" style="background:#edf8eb"></div>2020s</div>
+`;
+modeLegend.style.display = 'block';
 		        } 
 		        else if (mode === 'density') {
 		          // Use building proximity/density
