--- a/index.html
+++ b/index.html
@@ -715,7 +715,7 @@
 						<i class="fas fa-external-link-alt mr-1"></i> View on data.gov.sg </a>
 				</div>
 			</div>
-			<div class="flex flex-col md:flex-row justify-between items-center pt-4 border-t border-gray-700">
+			<div class="flex flex-col md:flex-row justify-center items-center text-center pt-4 border-t border-gray-700">
 				<div class="mb-4 md:mb-0">
 					<p class="text-sm text-gray-400">SG60: Visualizing Singapore's 60 Years of Development</p>
 					<p>Baorong Li & Ravi. Prudhvi Naga Sai Kumar</p>
