--- a/index.html
+++ b/index.html
@@ -720,7 +720,7 @@
 					<p class="text-sm text-gray-400">SG60: Visualizing Singapore's 60 Years of Development</p>
 					<p>Baorong Li & Ravi. Prudhvi Naga Sai Kumar</p>
 					<p class="text-sm text-gray-400">Link to Project idea</p>
-					<a href="https://prudhvinsk.github.io/SG-60-Project-Idea/" target="_blank">SG 60 Project Idea</a>
+					<a href="https://prudhvinsk.github.io/SG-60-Project-Idea/" target="_blank">Click Here</a>
 				</div>
 			</div>
 		</div>
